--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -23,6 +23,17 @@ body {
 .list-container {
     display: none;
 }
+.list-container a:hover {
+    color: hsl(26, 100%, 55%);
+    transition: ease-in-out 200ms;
+}
+.list-container a:active {
+    color: hsla(26, 100%, 55%, 0.276);
+}
+.cart-button svg:hover {
+    filter: invert(61%) sepia(34%) saturate(4718%) hue-rotate(347deg)
+        brightness(101%) contrast(101%);
+}
 
 .offcanvas-menu {
     height: 100%;
